Source/WebKit/NetworkProcess/Downloads/DownloadManager.cpp
@@ -71,6 +71,13 @@ void DownloadManager::dataTaskBecameDownloadTask(DownloadID downloadID, std::uni
     ASSERT(!m_downloads.contains(downloadID));
     m_downloadsAfterDestinationDecided.remove(downloadID);
     m_downloads.add(downloadID, WTFMove(download));
+
+#if ENABLE(TAKE_DOWNLOAD_ASSERTION)
+    if (m_downloads.size() == 1) {
+        ASSERT(!m_downloadAssertion);
+        m_downloadAssertion = std::make_unique<ProcessAssertion>(getpid(), "WebKit downloads"_s, AssertionState::Download);
+    }
+#endif
 }
 
 void DownloadManager::continueWillSendRequest(DownloadID downloadID, WebCore::ResourceRequest&& request)
@@ -172,6 +179,13 @@ void DownloadManager::downloadFinished(Download* download)
 {
     ASSERT(m_downloads.contains(download->downloadID()));
     m_downloads.remove(download->downloadID());
+    
+#if ENABLE(TAKE_DOWNLOAD_ASSERTION)
+    if (m_downloads.isEmpty()) {
+        ASSERT(m_downloadAssertion);
+        m_downloadAssertion = nullptr;
+    }
+#endif
 }
 
 void DownloadManager::didCreateDownload()
